<resources>
    <string name="app_name">Read To Me</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_pages">Pages</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="instructions_on_the_switch_button">If this button is on, it will read to you a
        sentence at a time. If it is off, it will read to you one word at a time
    </string>
    <string name="help_fragment_title">How to use</string>
    <string name="help_fragment_how_to_use_play_button">After a word or multiple words have been
        highlighted, this button will start reading to you. Once it starts playing, it will turn to
        a stop button.\nIf you want to listen to the entire chapter hold down the
        play button until it starts playing
    </string>
    <string name="help_fragment_how_to_use_sentence_button">If settings mode is set to read one
        word at a time, it will highlight the sentence of each word that was selected
        on the page.
    </string>
    <string name="help_fragment_how_to_use_page_button">Highlights the entire page for you</string>
    <string name="help_fragment_how_to_use_clear_button">Removes all highlights</string>
    <string name="help_fragment_how_to_use_previous_page_button">Turns to the previous page</string>
    <string name="help_fragment_how_to_use_next_page_button">Turns to the next page</string>
    <string name="help_fragment_how_to_use_dictionary">After the dictionary is finished setting up,
        you can hold down on a word and the dictionary definition will pop up.
    </string>
    <string name="bookmark_description">If you see the bookmark than this will be the first page you
        see when you restart the app
    </string>
    <string name="image_play_button_description">image play button description</string>
    <string name="image_sentence_button_description">image sentence button description</string>
    <string name="image_page_button_description">image page button description</string>
    <string name="image_clear_button_description">image clear button description</string>
    <string name="image_turn_back_page_button_description">image turn back page button description
    </string>
    <string name="image_turn_page_button_description">image turn page button description</string>
    <string name="image_bookmark_button_description">image bookmark button description</string>
    <string name="image_how_to_use">image how to use</string>
    <string name="select_page_heading">Select a page</string>
    <string name="settings_heading">Settings</string>
    <string name="settings_heading_background">Settings heading background</string>
    <string name="default_label">Default</string>
    <string name="voice_speed_label">Voice speed :</string>
    <string name="book_cover_image">Book Image box</string>
    <string name="bookmark_on_page_desciption">Bookmark</string>
    <string name="action_library">Go to library</string>
    <string name="directory_name">epubfiles</string>
    <string name="epub_name">.epub</string>
    <string name="error_loading_book">Error loading book</string>
    <string name="book_cover_backgroung_color">#0725a0</string>
    <string name="error_title">Error</string>
    <string name="error_connected_to_computer_or_no_books">If device is connected to computer,
        please disconnect and restart the app. If not, you have no books yet, but don\'t worry books
        are coming soon!!
    </string>
    <string name="loading_title">Loading Books</string>
    <string name="loading_message">Loading…</string>
    <string name="contents">Contents</string>
    <string name="first_page_by">"By: "</string>
    <string name="dictionary_being_set_up">Sorry, the dictionary is being set up</string>
    <string name="settings_saved">Settings saved</string>
    <string name="dictionary_being_set_up_first">Dictionary is being set up</string>
    <string name="dictionary_ready">Dictionary is ready</string>
    <string name="progress_setting_up_title">Setting up your book</string>
    <string name="progress_setting_up_message">Setting up…</string>
    <string name="contents_with_period">Contents.</string>
    <string name="table_of_content">Table of contents</string>
    <string name="table_of_contents">Table of content</string>
    <string name="help">Help</string>
    <string name="select_page">Select Page</string>
    <string name="select_chapter">Select Chapter</string>
    <string name="bookmark_page">Bookmark Page</string>
    <string name="help_library">Help</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Type name of boook</string>
    <string name="search_book_title">Search Book</string>
    <string name="hint_type">Type title</string>
    <string name="filtered_results">Filtered results:</string>
    <string name="selected_book_title">Selected Book:</string>
    <string name="hint_select_book">Please select a book</string>
    <string name="menu_search_book_title">Search book</string>
    <string name="title_activity_type_and_read">TypeAndRead</string>
    <string name="type_and_read_play_button">If you tap on this button it will play the highlighted
        sentences, if you hold down this button it will play everything in the type box.
    </string>
    <string name="type_and_read_clear_button">If you tap on this button it will clear all
        highlights. If you hold this button it will remove all words from the bottom view
    </string>
    <string name="type_and_read_type_rule">After typing any text in the type field, the bottom view
        gets reset to show the first word that was typed
    </string>
    <string name="type_here_hint">Type here</string>
</resources>
