<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.example.sammengistu.readtome.activities.PagesActivity">

    <item
            android:id="@+id/menu_bookmark_page"
            android:title="@string/bookmark_page"
            android:orderInCategory="100"
            app:showAsAction="ifRoom|always"/>

    <item
            android:id="@+id/menu_select_chapter"
            android:title="@string/select_chapter"
            android:orderInCategory="100"
            app:showAsAction="ifRoom|always"/>

    <item
            android:id="@+id/menu_select_page"
            android:title="@string/select_page"
            android:orderInCategory="100"
            app:showAsAction="ifRoom|always"/>

    <item
            android:id="@+id/menu_help"
            android:title="@string/help"
            android:orderInCategory="100"
            app:showAsAction="ifRoom|always"/>

    <item
            android:id="@+id/menu_setting"
            android:title="@string/action_settings"
            android:orderInCategory="100"
            app:showAsAction="ifRoom|always"/>

    <item
            android:id="@+id/menu_library"
            android:title="@string/action_library"
            android:orderInCategory="100"
            app:showAsAction="ifRoom|always"/>
</menu>
