<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp">

    <ImageView
            android:id="@+id/dialog_search_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/definition_word_box"
            android:contentDescription="Image used to surround word being looked up"
            android:layout_marginTop="20dp"/>

    <TextView
            android:id="@+id/dialog_search_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="35sp"
            android:layout_marginTop="45dp"
            android:text="@string/search_book_title"/>

    <EditText android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_below="@id/dialog_search_background"
              android:hint="@string/hint_type"
              android:layout_marginLeft="15dp"
              android:layout_marginRight="15dp"
              android:layout_marginTop="25dp"
              android:textSize="23sp"
              android:id="@+id/dialog_search_edit_text"/>

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/filtered_results"
              android:layout_below="@id/dialog_search_edit_text"
              android:layout_marginTop="10dp"
              android:layout_marginLeft="15dp"
              android:layout_marginBottom="18dp"/>

    <ListView
            android:id="@android:id/list"
            android:layout_width="wrap_content"
            android:layout_height="190dp"
            android:layout_marginTop="35dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_below="@+id/dialog_search_edit_text">

    </ListView>

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:id="@+id/dialog_selected_book_title"
              android:layout_below="@android:id/list"
              android:text="@string/selected_book_title"
              android:textSize="25sp"
              android:layout_marginTop="25dp"
              android:layout_centerInParent="true"/>

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/dialog_selected_book_box"
              android:layout_below="@+id/dialog_selected_book_title"
              android:textSize="25sp"
              android:hint="@string/hint_select_book"
              android:gravity="center"/>


</RelativeLayout>