<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="30dp"
                android:background="#ffffffff">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/definition_word_box"
            android:layout_centerHorizontal="true"
            android:id="@+id/settings_title_word_box_dialog"
            android:contentDescription="@string/settings_heading_background"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/settings_heading"
            android:textSize="40sp"
            android:id="@+id/settings_title_dialog"
            android:layout_marginTop="22dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/voice_speed_label"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="50dp"
            android:textSize="20sp"
            android:layout_below="@+id/settings_title_dialog"
            android:id="@+id/settings_voice_speed_text_view_dialog"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/settings_voice_speed_number_text_view_dialog"
            android:layout_toRightOf="@+id/settings_voice_speed_text_view_dialog"
            android:layout_below="@+id/settings_title_dialog"
            android:textSize="20sp"
            android:text="20"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="50dp"/>

    <SeekBar
            android:id="@+id/settings_change_voice_speed_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:max="40"
            android:progress="20"
            android:layout_below="@+id/settings_voice_speed_text_view_dialog"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_label"
            android:id="@+id/settings_default_button_dialog"
            android:layout_below="@+id/settings_change_voice_speed_dialog"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"/>

</RelativeLayout>